; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_notes.c_git_note_commit_create.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_notes.c_git_note_commit_create.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GIT_OID_HEXSZ = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @git_note_commit_create(i32* %0, i32* %1, i32* %2, i32* %3, i32* %4, i32* %5, i32* %6, i8* %7, i32 %8) #0 {
  %10 = alloca i32*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i32*, align 8
  %14 = alloca i32*, align 8
  %15 = alloca i32*, align 8
  %16 = alloca i32*, align 8
  %17 = alloca i8*, align 8
  %18 = alloca i32, align 4
  %19 = alloca i32, align 4
  %20 = alloca i32*, align 8
  %21 = alloca i8*, align 8
  %22 = alloca i64, align 8
  store i32* %0, i32** %10, align 8
  store i32* %1, i32** %11, align 8
  store i32* %2, i32** %12, align 8
  store i32* %3, i32** %13, align 8
  store i32* %4, i32** %14, align 8
  store i32* %5, i32** %15, align 8
  store i32* %6, i32** %16, align 8
  store i8* %7, i8** %17, align 8
  store i32 %8, i32* %18, align 4
  store i32* null, i32** %20, align 8
  %23 = load i32, i32* @GIT_OID_HEXSZ, align 4
  %24 = add nsw i32 %23, 1
  %25 = zext i32 %24 to i64
  %26 = call i8* @llvm.stacksave()
  store i8* %26, i8** %21, align 8
  %27 = alloca i8, i64 %25, align 16
  store i64 %25, i64* %22, align 8
  %28 = trunc i64 %25 to i32
  %29 = load i32*, i32** %16, align 8
  %30 = call i32 @git_oid_tostr(i8* %27, i32 %28, i32* %29)
  %31 = load i32*, i32** %13, align 8
  %32 = icmp ne i32* %31, null
  br i1 %32, label %33, label %38

33:                                               ; preds = %9
  %34 = load i32*, i32** %13, align 8
  %35 = call i32 @git_commit_tree(i32** %20, i32* %34)
  store i32 %35, i32* %19, align 4
  %36 = icmp slt i32 %35, 0
  br i1 %36, label %37, label %38

37:                                               ; preds = %33
  br label %52

38:                                               ; preds = %33, %9
  %39 = load i32*, i32** %10, align 8
  %40 = load i32*, i32** %11, align 8
  %41 = load i32*, i32** %12, align 8
  %42 = load i32*, i32** %14, align 8
  %43 = load i32*, i32** %15, align 8
  %44 = load i8*, i8** %17, align 8
  %45 = load i32*, i32** %20, align 8
  %46 = load i32, i32* %18, align 4
  %47 = call i32 @note_write(i32* %39, i32* %40, i32* %41, i32* %42, i32* %43, i32* null, i8* %44, i32* %45, i8* %27, i32** %13, i32 %46)
  store i32 %47, i32* %19, align 4
  %48 = load i32, i32* %19, align 4
  %49 = icmp slt i32 %48, 0
  br i1 %49, label %50, label %51

50:                                               ; preds = %38
  br label %52

51:                                               ; preds = %38
  br label %52

52:                                               ; preds = %51, %50, %37
  %53 = load i32*, i32** %20, align 8
  %54 = call i32 @git_tree_free(i32* %53)
  %55 = load i32, i32* %19, align 4
  %56 = load i8*, i8** %21, align 8
  call void @llvm.stackrestore(i8* %56)
  ret i32 %55
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @git_oid_tostr(i8*, i32, i32*) #2

declare dso_local i32 @git_commit_tree(i32**, i32*) #2

declare dso_local i32 @note_write(i32*, i32*, i32*, i32*, i32*, i32*, i8*, i32*, i8*, i32**, i32) #2

declare dso_local i32 @git_tree_free(i32*) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
